--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
       "files": ["*.ts"],
       "extends": ["plugin:@nrwl/nx/typescript"],
       "rules": {
+        "@typescript-eslint/no-empty-function": "off",
         "@nrwl/nx/enforce-module-boundaries": [
           "error",
           {
