--- a/angular.json
+++ b/angular.json
@@ -68,10 +68,10 @@
       },
       "tags": []
     },
-    "i18n": {
+    "i18n-app": {
       "projectType": "application",
-      "root": "apps/i18n",
-      "sourceRoot": "apps/i18n/src",
+      "root": "apps/i18n-app",
+      "sourceRoot": "apps/i18n-app/src",
       "prefix": "angular-playground",
       "i18n": {
         "sourceLocale": "en",
@@ -90,13 +90,13 @@
           "options": {
             "localize": true,
             "i18nMissingTranslation": "warning",
-            "outputPath": "dist/apps/i18n",
-            "index": "apps/i18n/src/index.html",
-            "main": "apps/i18n/src/main.ts",
-            "polyfills": "apps/i18n/src/polyfills.ts",
-            "tsConfig": "apps/i18n/tsconfig.app.json",
-            "assets": ["apps/i18n/src/favicon.ico", "apps/i18n/src/assets"],
-            "styles": ["apps/i18n/src/styles.css"],
+            "outputPath": "dist/apps/i18n-app",
+            "index": "apps/i18n-app/src/index.html",
+            "main": "apps/i18n-app/src/main.ts",
+            "polyfills": "apps/i18n-app/src/polyfills.ts",
+            "tsConfig": "apps/i18n-app/tsconfig.app.json",
+            "assets": ["apps/i18n-app/src/favicon.ico", "apps/i18n-app/src/assets"],
+            "styles": ["apps/i18n-app/src/styles.css"],
             "scripts": []
           },
           "configurations": {
@@ -115,14 +115,14 @@
               ],
               "fileReplacements": [
                 {
-                  "replace": "apps/i18n/src/environments/environment.ts",
-                  "with": "apps/i18n/src/environments/environment.prod.ts"
+                  "replace": "apps/i18n-app/src/environments/environment.ts",
+                  "with": "apps/i18n-app/src/environments/environment.prod.ts"
                 }
               ],
               "outputHashing": "all"
             },
             "development": {
-              "localize": false,
+              "localize": ["en"],
               "buildOptimizer": false,
               "optimization": false,
               "vendorChunk": true,
@@ -137,38 +137,62 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "i18n:build:production"
+              "browserTarget": "i18n-app:build:production"
             },
             "development": {
-              "browserTarget": "i18n:build:development"
+              "browserTarget": "i18n-app:build:development"
             }
           },
           "defaultConfiguration": "development",
           "options": {
-            "proxyConfig": "apps/i18n/proxy.conf.json"
+            "proxyConfig": "apps/i18n-app/proxy.conf.json"
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "i18n:build"
+            "browserTarget": "i18n-app:build",
+            "outFile": "locales/messages.en.xlf"
           }
         },
         "lint": {
           "builder": "@nrwl/linter:eslint",
           "options": {
             "lintFilePatterns": [
-              "apps/i18n/src/**/*.ts",
-              "apps/i18n/src/**/*.html"
+              "apps/i18n-app/src/**/*.ts",
+              "apps/i18n-app/src/**/*.html"
             ]
           }
         },
         "test": {
           "builder": "@nrwl/jest:jest",
-          "outputs": ["coverage/apps/i18n"],
+          "outputs": ["coverage/apps/i18n-app"],
           "options": {
-            "jestConfig": "apps/i18n/jest.config.js",
+            "jestConfig": "apps/i18n-app/jest.config.js",
             "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
+    "ui": {
+      "projectType": "library",
+      "root": "libs/ui",
+      "sourceRoot": "libs/ui/src",
+      "prefix": "angular-playground",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/ui"],
+          "options": {
+            "jestConfig": "libs/ui/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["libs/ui/src/**/*.ts", "libs/ui/src/**/*.html"]
           }
         }
       },
