--- a/angular.json
+++ b/angular.json
@@ -283,6 +283,99 @@
       },
       "tags": []
     },
+    "standalone-components": {
+      "projectType": "application",
+      "root": "apps/standalone-components",
+      "sourceRoot": "apps/standalone-components/src",
+      "prefix": "angular-playground",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/standalone-components",
+            "index": "apps/standalone-components/src/index.html",
+            "main": "apps/standalone-components/src/main.ts",
+            "polyfills": "apps/standalone-components/src/polyfills.ts",
+            "tsConfig": "apps/standalone-components/tsconfig.app.json",
+            "assets": [
+              "apps/standalone-components/src/favicon.ico",
+              "apps/standalone-components/src/assets"
+            ],
+            "styles": ["apps/standalone-components/src/styles.css"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/standalone-components/src/environments/environment.ts",
+                  "with": "apps/standalone-components/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "standalone-components:build:production"
+            },
+            "development": {
+              "browserTarget": "standalone-components:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "standalone-components:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/standalone-components/src/**/*.ts",
+              "apps/standalone-components/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/standalone-components"],
+          "options": {
+            "jestConfig": "apps/standalone-components/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      },
+      "tags": []
+    },
     "ui": {
       "projectType": "library",
       "root": "libs/ui",
